fixed results text overlap

--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,3 @@
-/*! HTML5 Boilerplate v5.0 | MIT License | http://h5bp.com/ */
-
 html {
     color: #222;
     font-size: 1em;
@@ -75,6 +73,16 @@ textarea {
     overflow: visible;
     position: static;
     width: auto;
+}
+
+#results {
+  text-align: center;
+}
+
+#results>div {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
 }
 
 .result-text {
@@ -205,7 +213,7 @@ textarea {
 }
 
 .content h3 {
-  margin-top: 48px;
+  /*margin-top: 48px;*/
 }
 
 .footer {
@@ -274,6 +282,14 @@ paper-material.content {
 google-chart {
   height: 300px;
   width: 50em;
+}
+
+#google-charts-wrapper {
+  overflow: hidden;
+}
+
+.auto-width {
+  width: auto;
 }
 
 .mdl-button--fab.mdl-button--colored {
